--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,11 @@
-name: ACTION_TEST
+name: Continuous Integration
 
 on:
-  push:
-    branches:
-    - main
+  pull_request:
+    branches: [main]
 
 jobs:
-  build:
-
+  test_pull_request:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+      - uses: actions/checkout@latest
