--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,6 @@ jobs:
           pip install flake8 pytest
           flake8 .
         continue-on-error: true
-      - name: Test with unittest
+      - name: Test with pytest
         run: |
-          python -m unittest discover -s ./tests -p '*_test.py'
+          pytest
