--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pyaudio
+          pip install libportaudio2
       - name: Lint with flake8
         run: |
           pip install flake8 pytest
