--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          apt-get install libasound-dev libportaudio2 libportaudiocpp0 portaudio19-dev -y
+          sudo apt-get install libasound-dev libportaudio2 libportaudiocpp0 portaudio19-dev -y
       - name: Lint with flake8
         run: |
           pip install flake8 pytest
