--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,4 @@ jobs:
         continue-on-error: true
       - name: Test with pytest
         run: |
-          pytest -r tests
+          pytest
