--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-tensorflow
-sounddevice
-numpy
-scipy
-librosa
-matplotlib
-pytest
-pylint
-psutil
+tensorflow==2.11.1
+sounddevice==0.4.6
+numpy==1.23.5
+scipy==1.10.1
+librosa==0.10.0.post2
+matplotlib==3.7.1
+psutil==5.9.5
+pytest==7.1.2
+pylint==2.16.2
